# mnafricano.github.io

./: .cognitive_multiplexer_memory.json  .gitignore  EromeArchiver.spec  README.md  README_TTS.md  email.php  generate_audio.py  index.html  package.json  pnpm-lock.yaml  pyproject.toml  site-effects.js  styles.css
chicago-3d/: agents-3d.js  index.html  script.js  styles.css
civic-simulator/: index.html  sample-acs-income.json  sample-city-feed.csv  sample-tracts.geojson  script.js  styles.css
cognitive-mpc/: .gitignore  README.md  main.py  web_server.py
cognitive_multiplexer/: __init__.py  __main__.py  api.py  candidate_generator.py  cli.py  controller.py  demo_server.py  expert_router.py  experts.py  llm.py  long_term_memory.py  models.py  perception.py  verifier.py  working_memory.py
docs/: revenue-auditor-operations.md
email/: form.lib.php  form.php
erome_archiver/: __init__.py  __main__.py  cli.py  database.py  desktop.py  installer.py  metadata.py  models.py  parser.py  service.py  web.py
execution-engine/: index.html  script.js  styles.css
narration_text/: chapter-01-a-note-before-we-begin.txt  chapter-03-chapter-2-the-deep-structure-of-everything.txt  chapter-04-chapter-3-the-power-of-stories-we-tell-together.txt  chapter-05-chapter-4-the-architecture-of-ethics.txt  chapter-06-chapter-5-the-invisible-architecture-of-power.txt  chapter-08-chapter-7-the-art-of-a-finite-life.txt  chapter-09-what-we-do-with-all-of-this.txt
resume/: experiment.css  experiment.html  index.html
revenue-auditor/: app.js  core.js  index 2.html  index.html  storage.js  (+1 more)
(+222 files in other folders)
