[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-multiplexer"
version = "0.1.0"
description = "A modular prototype cognitive AI runtime with memory, experts, verification, and traceable orchestration."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
cognitive-multiplexer = "cognitive_multiplexer.cli:main"

[tool.setuptools.packages.find]
include = ["cognitive_multiplexer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
